--- a/pom.xml
+++ b/pom.xml
@@ -1,1 +1,107 @@
-<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0"         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">    <modelVersion>4.0.0</modelVersion>    <groupId>cn.hwang</groupId>    <artifactId>geospark-dev</artifactId>    <version>1.0</version>    <properties>        <scala.version>2.11</scala.version>        <geospark.version>1.3.1</geospark.version>        <spark.compatible.verison>2.3</spark.compatible.verison>        <spark.version>2.3.4</spark.version>        <hadoop.version>2.7.2</hadoop.version>        <geotools.version>20.0</geotools.version>        <dependency.scope>compile</dependency.scope>    </properties>    <dependencies>        <dependency>            <groupId>org.scala-lang</groupId>            <artifactId>scala-library</artifactId>            <version>2.11.0</version>        </dependency>        <dependency>            <groupId>org.datasyslab</groupId>            <artifactId>geospark</artifactId>            <version>${geospark.version}</version>        </dependency>        <dependency>            <groupId>org.datasyslab</groupId>            <artifactId>geospark-sql_${spark.compatible.verison}</artifactId>            <version>${geospark.version}</version>        </dependency>        <dependency>            <groupId>org.datasyslab</groupId>            <artifactId>geospark-viz_${spark.compatible.verison}</artifactId>            <version>${geospark.version}</version>        </dependency>        <dependency>            <groupId>org.apache.spark</groupId>            <artifactId>spark-core_${scala.version}</artifactId>            <version>${spark.version}</version>            <scope>${dependency.scope}</scope>            <exclusions>                <exclusion>                    <groupId>org.apache.hadoop</groupId>                    <artifactId>*</artifactId>                </exclusion>            </exclusions>        </dependency>        <dependency>            <groupId>org.apache.spark</groupId>            <artifactId>spark-sql_${scala.version}</artifactId>            <version>${spark.version}</version>            <scope>${dependency.scope}</scope>        </dependency>        <dependency>            <groupId>org.apache.hadoop</groupId>            <artifactId>hadoop-mapreduce-client-core</artifactId>            <version>${hadoop.version}</version>            <scope>${dependency.scope}</scope>        </dependency>        <dependency>            <groupId>org.apache.hadoop</groupId>            <artifactId>hadoop-common</artifactId>            <version>${hadoop.version}</version>            <scope>${dependency.scope}</scope>        </dependency>        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->        <dependency>            <groupId>org.postgresql</groupId>            <artifactId>postgresql</artifactId>            <version>42.2.5</version>        </dependency>    </dependencies>    <build>        <plugins>            <plugin>                <!-- see http://davidb.github.com/scala-maven-plugin -->                <groupId>net.alchim31.maven</groupId>                <artifactId>scala-maven-plugin</artifactId>                <version>3.2.1</version>            </plugin>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-compiler-plugin</artifactId>                <version>3.8.0</version>                <configuration>                    <source>1.8</source>                    <target>1.8</target>                </configuration>            </plugin>        </plugins>    </build></project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>cn.gzpi.hwang</groupId>
+    <artifactId>SedonaBook</artifactId>
+    <version>1.0</version>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <spark.version>2.4.0</spark.version>
+        <sedona.spark.version>2.4_2.11</sedona.spark.version>
+        <sedona.ersion>1.0.0-incubating</sedona.ersion>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.sedona</groupId>
+            <artifactId>sedona-core-2.4_2.11</artifactId>
+            <version>1.0.0-incubating</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sedona</groupId>
+            <artifactId>sedona-sql-2.4_2.11</artifactId>
+            <version>1.0.0-incubating</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sedona</groupId>
+            <artifactId>sedona-viz-2.4_2.11</artifactId>
+            <version>1.0.0-incubating</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-main</artifactId>
+            <version>24.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.geotools/gt-referencing -->
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-referencing</artifactId>
+            <version>24.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.geotools/gt-epsg-hsql -->
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>24.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wololo</groupId>
+            <artifactId>jts2geojson</artifactId>
+            <version>0.14.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>maven.aliyun.com</id>
+            <name>maven.aliyun.com</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net repository</name>
+            <url>https://download.java.net/maven/2</url>
+        </repository>
+        <repository>
+            <id>osgeo</id>
+            <name>OSGeo Release Repository</name>
+            <url>https://repo.osgeo.org/repository/release/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+</project>
